--- a/men.html
+++ b/men.html
@@ -96,7 +96,7 @@
                 <h6>SEARCH<br>__________________</h6>
                   <a href="login.html" ><h6>LOG IN</h6></a>
                   <a href=" "> <h6>HELP</h6></a>
-                   <a href="bag.html"> <h6>BAG</h6> </a> 
+                   <a href="bag.html"> <h2> 🛒</h2> </a> 
                </div>
              </div>
     
