--- a/closet.html
+++ b/closet.html
@@ -22,10 +22,12 @@
         src="file:///C:/Users/pcpoint/Downloads/CLOSET.png">
         </div>
         <div id="navrgt">
-           <h6>SEARCH<br>__________________</h6>
+           
+            <h6>SEARCH<br>__________________</h6>
+
            <a href="login.html" ><h6>LOG IN</h6></a>
            <a href="           "> <h6>HELP</h6></a>
-            <a href="bag.html"  > <h1>🛍</h1> </a> 
+            <a href="bag.html"  > <h2>🛒</h2> </a> 
         </div>
       </div>
            <div class="bigimg">
