--- a/closet.html
+++ b/closet.html
@@ -13,19 +13,22 @@
    <div id="main">
      <div id="navbar">
         <div id="navlft">
+
         <div class="wrap">
             <a href=""><div class="icon"></div>
             <div class="icon"></div>
             <div class="icon"></div>
         </div>
+     
+
         <img class="logo"
         src="file:///C:/Users/pcpoint/Downloads/CLOSET.png">
         </div>
         <div id="navrgt">
            <h6>SEARCH<br>__________________</h6>
            <a href="login.html" ><h6>LOG IN</h6></a>
-           <a href="           "> <h6>HELP</h6></a>
-            <a href="bag.html"  > <h1>🛍</h1> </a> 
+           <a href="help.html"><h6>HELP</h6></a>
+            <a href="bag.html"  > <h4 class="bg">🛒</h4> </a> 
         </div>
       </div>
            <div class="bigimg">
