--- a/kids.html
+++ b/kids.html
@@ -5,8 +5,313 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KIDS SECTION</title>
+
+
+
+<style>
+
+
+
+    #kidshop{
+                display: grid;
+                gap: 20px;
+                grid-template-columns:repeat(4,1fr);
+                grid-template-rows:auto ;
+               justify-content: space-evenly;
+               align-items: center;
+    }
+    .kidpro{
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+       text-align: center;
+    }
+    .kidpro>button{
+        margin-bottom: 9px;
+        background-color: rgb(1, 1, 75);
+        color: white;
+    }
+    .kid{
+        width: 100%;
+    }
+
+
+    button:hover{
+cursor: pointer;
+background-color: rgb(91, 189, 247);
+    }
+
+
+    *{
+margin: 0;
+padding: 0;
+}
+
+
+#navbar4{
+display: flex;
+height: auto;
+width: auto;
+justify-content: space-between;
+padding-top: 50px;
+
+position: sticky;
+top: 0;
+
+
+}
+#navlft4{
+display: flex;
+justify-content: space-around;
+height: auto;
+width: 20%;
+}
+#navrgt4{
+display: flex;
+justify-content:space-around;
+padding-top: 5px;
+height: auto;
+width: 30%;
+}
+
+.wrap4{
+width: 50px;
+
+}
+.icon4{
+width: 25px;
+height: 2px;
+background: rgb(20, 14, 14);
+margin: 6px 0px;
+
+}
+
+.logo4{
+width: 130px;
+}
+
+
+.bg4{
+background-color: black;
+color: brown;
+border-radius: 50%;
+}
+
+
+
+
+@media all and (min-width:301px) and (max-width:600px){
+    #kidshop{
+                     grid-template-columns: repeat(2,1fr);
+                     grid-template-rows: auto;
+    }
+
+    }
+
+
+
+ @media all and (min-width:10px) and (max-width:300px){
+    #kidshop{
+                     grid-template-columns: repeat(1,1fr);
+                     grid-template-rows: auto;
+    }
+ }
+
+
+
+</style>
 </head>
 <body>
-      <h1>HELLO KID HAVE FUN</h1>
+  
+
+
+        <div id="navbar4">
+           <div id="navlft4">
+           <div class="wrap4">
+               <a href=""><div class="icon4"></div>
+               <div class="icon4"></div>
+               <div class="icon4"></div>
+           </div>
+           <img class="logo4"
+           src="file:///C:/Users/pcpoint/Downloads/CLOSET.png">
+           </div>
+           <div id="navrgt4">
+            <h6>SEARCH<br>__________________</h6>
+              <a href="login.html" ><h6>LOG IN</h6></a>
+              <a href="help.html"> <h6>HELP</h6></a>
+               <a href="bag.html"> <h4 class="bg4">🛒</h4> </a> 
+           </div>
+         </div>
+
+
+
+    <div id="kidshop">
+
+        <div class="kidpro">
+            <img class="kid" src="https://static.zara.net/photos///2022/I/0/3/p/5854/733/612/102/w/563/5854733612_1_1_1.jpg?ts=1668086528737 ">
+            <p clsss="pri">1350 Rs</p>
+            <button>ADD TO BAG</button>
+        </div>
+
+
+
+
+        <div class="kidpro">
+            <img class="kid" src="https://static.zara.net/photos///2022/I/0/3/p/5854/733/620/2/w/563/5854733620_6_1_1.jpg?ts=1664286350114 ">
+            <p clsss="pri">1350 Rs</p>
+            <button>ADD TO BAG</button>
+        </div>
+
+
+        <div class="kidpro">
+            <img class="kid" src="https://static.zara.net/photos///2022/I/0/3/p/2675/700/107/2/w/563/2675700107_6_1_1.jpg?ts=1661241633423 ">
+            <p clsss="pri">1350 Rs</p>
+            <button>ADD TO BAG</button>
+        </div>
+
+
+
+        <div class="kidpro">
+            <img class="kid" src="https://static.zara.net/photos///2022/I/0/3/p/7901/700/668/2/w/563/7901700668_6_1_1.jpg?ts=1659341028338 ">
+            <p clsss="pri">1350 Rs</p>
+            <button>ADD TO BAG</button>
+        </div>
+
+
+
+        <div class="kidpro">
+            <img class="kid" src=" https://static.zara.net/photos///2022/I/0/3/p/1019/391/808/2/w/563/1019391808_6_1_1.jpg?ts=1667376879570">
+            <p clsss="pri">1350 Rs</p>
+            <button>ADD TO BAG</button>
+        </div>
+
+
+
+        <div class="kidpro">
+            <img class="kid" src="https://static.zara.net/photos///2022/I/0/3/p/6566/286/808/2/w/563/6566286808_6_1_1.jpg?ts=1667569430639 ">
+            <p clsss="pri">1350 Rs</p>
+            <button>ADD TO BAG</button>
+        </div>
+
+
+        <div class="kidpro">
+            <img class="kid" src="https://static.zara.net/photos///2022/I/0/3/p/8288/730/800/302/w/563/8288730800_1_1_1.jpg?ts=1667474143529 ">
+            <p clsss="pri">1350 Rs</p>
+            <button>ADD TO BAG</button>
+        </div>
+
+
+        <div class="kidpro">
+            <img class="kid" src="https://static.zara.net/photos///2022/I/0/3/p/3182/800/250/2/w/563/3182800250_6_1_1.jpg?ts=1663846988629 ">
+            <p clsss="pri">1350 Rs</p>
+            <button>ADD TO BAG</button>
+        </div>
+
+
+        <div class="kidpro">
+            <img class="kid" src="https://static.zara.net/photos///2022/I/0/3/p/8288/729/800/2/w/1366/8288729800_6_1_1.jpg?ts=1666685181264 ">
+            <p clsss="pri">1350 Rs</p>
+            <button>ADD TO BAG</button>
+        </div>
+
+
+        <div class="kidpro">
+            <img class="kid" src="https://static.zara.net/photos///2022/I/0/3/p/6706/711/802/2/w/563/6706711802_6_1_1.jpg?ts=1660043444440 ">
+            <p clsss="pri">1350 Rs</p>
+            <button>ADD TO BAG</button>
+        </div>
+
+
+        <div class="kidpro">
+            <img class="kid" src="https://static.zara.net/photos///2022/I/0/3/p/1608/800/401/2/w/563/1608800401_6_1_1.jpg?ts=1666685186179 ">
+            <p clsss="pri">1350 Rs</p>
+            <button>ADD TO BAG</button>
+        </div>
+
+
+        <div class="kidpro">
+            <img class="kid" src="https://static.zara.net/photos///2022/V/0/3/p/7545/661/400/2/w/563/7545661400_6_1_1.jpg?ts=1642614547387 ">
+            <p clsss="pri">1350 Rs</p>
+            <button>ADD TO BAG</button>
+        </div>
+
+
+        <div class="kidpro">
+            <img class="kid" src="https://static.zara.net/photos///2022/I/0/3/p/7521/727/940/2/w/563/7521727940_6_1_1.jpg?ts=1666880849138 ">
+            <p clsss="pri">1350 Rs</p>
+            <button>ADD TO BAG</button>
+        </div>
+
+
+        <div class="kidpro">
+            <img class="kid" src=" https://static.zara.net/photos///2022/I/0/3/p/2756/559/807/402/w/563/2756559807_1_1_1.jpg?ts=1668075028593">
+            <p clsss="pri">1350 Rs</p>
+            <button>ADD TO BAG</button>
+        </div>
+
+
+
+        <div class="kidpro">
+            <img class="kid" src="https://static.zara.net/photos///2022/I/0/3/p/5644/603/505/2/w/563/5644603505_6_1_1.jpg?ts=1661510898912 ">
+            <p clsss="pri">1350 Rs</p>
+            <button>ADD TO BAG</button>
+        </div>
+
+
+        <div class="kidpro">
+            <img class="kid" src=" https://static.zara.net/photos///2022/I/0/3/p/1473/554/052/2/w/563/1473554052_6_1_1.jpg?ts=1663597545785">
+            <p clsss="pri">1350 Rs</p>
+            <button>ADD TO BAG</button>
+        </div>
+
+
+        <div class="kidpro">
+            <img class="kid" src="https://static.zara.net/photos///2022/I/0/3/p/1473/565/401/2/w/563/1473565401_6_1_1.jpg?ts=1667219286309 ">
+            <p clsss="pri">1350 Rs</p>
+            <button>ADD TO BAG</button>
+        </div>
+
+
+        <div class="kidpro">
+            <img class="kid" src="https://static.zara.net/photos///2022/I/0/3/p/3172/500/800/203/w/1366/3172500800_1_1_1.jpg?ts=1667814484310 ">
+            <p clsss="pri">1350 Rs</p>
+            <button>ADD TO BAG</button>
+        </div>
+
+
+        <div class="kidpro">
+            <img class="kid" src="https://static.zara.net/photos///2022/I/0/3/p/1006/123/500/2/w/563/1006123500_6_1_1.jpg?ts=1667229601922 ">
+            <p clsss="pri">1350 Rs</p>
+            <button>ADD TO BAG</button>
+        </div>
+
+
+        <div class="kidpro">
+            <img class="kid" src="https://static.zara.net/photos///2022/I/0/3/p/3905/516/800/2/w/563/3905516800_6_1_1.jpg?ts=1666276984243 ">
+            <p clsss="pri">1350 Rs</p>
+            <button>ADD TO BAG</button>
+        </div>
+
+
+        <div class="kidpro">
+            <img class="kid" src="https://static.zara.net/photos///2022/I/0/3/p/5767/574/712/282/w/563/5767574712_6_1_1.jpg?ts=1667997149930 ">
+            <p clsss="pri">1350 Rs</p>
+            <button>ADD TO BAG</button>
+        </div>
+
+
+        <div class="kidpro">
+            <img class="kid" src="https://static.zara.net/photos///2022/I/0/3/p/0485/615/800/2/w/563/0485615800_6_1_1.jpg?ts=1665652074833 ">
+            <p clsss="pri">1350 Rs</p>
+            <button>ADD TO BAG</button>
+        </div>
+
+
+
+
+
+
+
+
+
+    </div>
 </body>
 </html>
