--- a/closet.html
+++ b/closet.html
@@ -26,11 +26,17 @@
             <h6>SEARCH<br>__________________</h6>
 
            <a href="login.html" ><h6>LOG IN</h6></a>
-           <a href="           "> <h6>HELP</h6></a>
-            <a href="bag.html"  > <h2>🛒</h2> </a> 
+           <a href="help.html"> <h6>HELP</h6></a>
+            <a href="bag.html"  > <h3  class="bg00">🛒</h3> </a> 
         </div>
       </div>
            <div class="bigimg">
+
+            <div>
+              <a href="allproduct.html">
+                <img src=" https://thumbs.dreamstime.com/z/portrait-happy-african-american-family-holding-shopping-bags-black-friday-smiling-paper-successful-yellow-studio-161285152.jpg"/>
+              </a>
+            </div>
           
          <div>
       <a href="women.html"> <img src="https://static.zara.net/photos///contents/mkt/spots/aw22-north-woman-new/subhome-xmedia-45//w/1366/IMAGE-landscape-default-fill-72e23389-afdf-460f-95e6-0b2eb0aab4d3-default_0.jpg?ts=1667838049147 "/></a>
